--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <ul><a href="/grids/paris.html">Paris</a></ul>
             <ul><a href=""></a></ul>
         <li>Extra</li>
-            <ul><a href=""></a></ul>
+            <ul><a href="2b2t/index.html">2b2t Wiki</a></ul>
+            <ul><a href="/maximus/main.html">Forum</a></ul>
+            <ul><a href="/maximus/sigma.html">Typewriter (JS)</a></ul>
     </ol>
 </body>
 </html>
